--- a/Growbinar_Backend/.env
+++ b/Growbinar_Backend/.env
@@ -1,2 +1,4 @@
-SECRET_KEY='django-insecure-*s$q2)*+)&2j2$kt9_jv-8@sp$k$twisbse_(p@49c^m)3_oy3'
+SECRET_KEY='gaaJWHMs6TU68Rqpdp1K5bMlYQCBFDI02Dw0FgWGBm8='
+# SECRET_KEY='gauJWHMh6TU68Rapdp1K5bMnYQCBFDI02Dw0FgWGBm8='
+
 PORT=5000
