--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-appconf==1.0.6
 django-cors-headers==4.3.1
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+django-ratelimit==4.1.0
 gunicorn==22.0.0
 logging==0.4.9.6
 psycopg2-binary==2.9.9
