--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ zoom_account_id = 'L1vtXd4hRbG84DHdeIwDpQ'
 
 
 # DB CREDENTIAL
-db_host_id = 'ep-summer-poetry-a46p88qe-pooler.us-east-1.aws.neon.tech'
-db_password =  'pJihmtHYq91v'
+db_host_id = 'ep-gentle-lab-a4so1tpa-pooler.us-east-1.aws.neon.tech'
+db_password = 'axhRmdTw6y8K'
 
 # EMAIL CREDENTIAL
 email_host_id = 'dharunpalanisamy5256@gmail.com'
