added backend url to env

--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@ SECRET_KEY='gaaJWHMs6TU68Rqpdp1K5bMlYQCBFDI02Dw0FgWGBm8='
 
 PORT=5000
 
+# BACKEND URL
+BACKEND_URL = 'https://growbinar-backend-4.onrender.com/'
+
 # ZOOM CREDENTIAL
 zoom_client_id = 'sQfZE0a7RIWtq0ziI1VQEw'
 zoom_secret_id = 'mI5FLA1hRccRQ5fCkT5dIrDZFV4ftPa8'
