depoloyment server code to test code

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ SECRET_KEY='gaaJWHMs6TU68Rqpdp1K5bMlYQCBFDI02Dw0FgWGBm8='
 PORT=5000
 
 # BACKEND URL
-BACKEND_URL = 'https://growbinar-backend-4.onrender.com/'
+BACKEND_URL = 'https://api.growbinar.com/'
 
 # ZOOM CREDENTIAL
 zoom_client_id = 'sQfZE0a7RIWtq0ziI1VQEw'
@@ -13,9 +13,9 @@ zoom_account_id = 'L1vtXd4hRbG84DHdeIwDpQ'
 
 
 # DB CREDENTIAL
-db_host_id = 'ep-gentle-lab-a4so1tpa-pooler.us-east-1.aws.neon.tech'
-db_password = 'axhRmdTw6y8K'
+db_host_id = 'localhost'
+db_password = 'Growbinar#123Tech'
 
 # EMAIL CREDENTIAL
-email_host_id = 'dharunpalanisamy5256@gmail.com'
-email_host_password = 'gqruvarabwlkddgq'
+email_host_id = 'growbinar@gmail.com'
+email_host_password = 'amie bmqw uyph evra'
