--- a/.env
+++ b/.env
@@ -13,8 +13,11 @@ zoom_account_id = 'L1vtXd4hRbG84DHdeIwDpQ'
 
 
 # DB CREDENTIAL
-db_host_id = 'localhost'
-db_password = 'Growbinar#123Tech'
+# db_host_id = 'localhost'
+# db_password = 'Growbinar#123Tech'
+
+db_host_id = "ep-summer-poetry-a46p88qe-pooler.us-east-1.aws.neon.tech"
+db_password = "pJihmtHYq91v"
 
 # EMAIL CREDENTIAL
 email_host_id = 'growbinar@gmail.com'
